# movielens-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yaml  predict.py  pyproject.toml  train.py
artifacts/: als_model.pkl
src/: data.py  metrics.py  utils.py
src/models/: als_model.py  svd_model.py
