[project]
name = "movielens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "implicit>=0.7.3",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "protobuf==3.20.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools==68.2.2",
    "streamlit>=1.57.0",
    "toml>=0.10.2",
]
